+ 던지기 작업 + 카메라 조정 + 스카이 추가

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -38,6 +38,7 @@ bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
++ActionMappings=(ActionName="TouchScreen",Key=Touch1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
