+ 터치 컨트롤러 왼쪽 추가 + 낚싯대 던지기 게이지 추가

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -39,6 +39,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="TouchScreen",Key=Touch1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++AxisMappings=(AxisName="TouchLeftX",Key=Gamepad_LeftX,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
